@@ -61,7 +61,7 @@ import org.xml.sax.*;
  * of XML special chars and correct charset encoding.
  *
  * @author  Richard Körber &lt;dev@shredzone.de&gt;
- * @version $Id: XMLWriter.java,v 1.5 2004/08/23 23:49:16 shred Exp $
+ * @version $Id: XMLWriter.java 75 2006-02-10 08:17:27Z shred $
  */
 public class XMLWriter extends BufferedWriter {
   private String indent     = "  ";
