@@ -52,7 +52,7 @@ import java.awt.*;
  * has a text, never gets the focus and has no borders.
  *
  * @author  Richard Körber &lt;dev@shredzone.de&gt;
- * @version $Id: JToolbarButton.java,v 1.7 2005/08/08 13:06:56 shred Exp $
+ * @version $Id: JToolbarButton.java 75 2006-02-10 08:17:27Z shred $
  */
 public class JToolbarButton extends JButton {
   private static final long serialVersionUID = 3905246710308417843L;
