@@ -55,7 +55,7 @@ import javax.swing.table.*;
  * take care for the sorting.
  *
  * @author  Richard Körber &lt;dev@shredzone.de&gt;
- * @version $Id: SortableTableModel.java,v 1.3 2004/08/23 23:49:15 shred Exp $
+ * @version $Id: SortableTableModel.java 75 2006-02-10 08:17:27Z shred $
  */
 public interface SortableTableModel extends TableModel {
 
